--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.16.0",
